--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,15 +1,20 @@
 [versions]
-agp = "8.11.1"
-kotlin = "2.2.10"
+agp = "8.11.2"
+kotlin = "2.2.21"
 coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
 espressoCore = "3.7.0"
-lifecycleRuntimeKtx = "2.9.3"
-activityCompose = "1.10.1"
-composeBom = "2025.08.01"
-navigationCompose="2.9.3"
+lifecycleRuntimeKtx = "2.9.4"
+activityCompose = "1.11.0"
+composeBom = "2025.10.01"
+navigationCompose="2.9.5"
 kotlinSerialization="1.9.0"
+retrofit="3.0.0"
+hilt="2.57.2"
+hilt-navigation="1.3.0"
+ksp = "2.2.21-2.0.4"
+datastore = "1.1.7"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -27,17 +32,34 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 
+#DATASTORE
+datastore-preferences = { module="androidx.datastore:datastore-preferences", version.ref="datastore"}
+
+#HILT
+hilt-android = { module = "com.google.dagger:hilt-android", version.ref="hilt"}
+hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref="hilt"}
+hilt-navigation = { module="androidx.hilt:hilt-navigation-compose", version.ref="hilt-navigation"}
+
+#Material Icons
+androidx-material-icons-core = { group = "androidx.compose.material", name="material-icons-core"}
+androidx-material-icons-extended = { group = "androidx.compose.material", name="material-icons-extended"}
+
 #NAVIGATION COMPOSE
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref="navigationCompose"}
 
 #SERIALIZATION
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref="kotlinSerialization"}
 
+#RETROFIT
+retrofit = {module = "com.squareup.retrofit2:retrofit", version.ref="retrofit"}
+retrofit-adapter = { module = "com.squareup.retrofit2:converter-kotlinx-serialization", version.ref="retrofit"}
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-
 jetbrainsKotlinSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref="kotlin"}
+hilt = {id = "com.google.dagger.hilt.android", version.ref = "hilt"}
+ksp = { id = "com.google.devtools.ksp", version.ref="ksp"}
 
